Add W3C subresource integrity tool

--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>STEEM smartvotes voter's app</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap-4.0.0.min.css"
+          integrity="sha384-5iL/Lw9kHhhsgblb3am4cdovaFgONP7lxc4wh5a3qvq+X7NT+OlGQG29pKGZ2rzr"/>
+
+    <title>STEEM smartvotes voter page</title>
 </head>
 <body>
-  <h1>STEEM smartvotes voter's app</h1>
-  <p>Coming soon...</p>
+<h1>STEEM smartvotes voter page</h1>
+<p>
+    Coming soon...
+</p>
+
+<script src="vendor/jquery/jquery-3.3.1.min.js"
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"></script>
+<script src="vendor/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"></script>
+<script src="vendor/bootstrap/bootstrap-4.0.0.min.js"
+        integrity="sha384-hELc4MRmolvcDvuzl/3FNNU/J6iZrg9KjhNCuUJWtpClnHeJA4yID0ul8/pMrRxJ"></script>
 </body>
 </html>
+
+<!--
+shasum -b -a 384 vendor/bootstrap/bootstrap-4.0.0.min.css | xxd -r -p | base64
+shasum -b -a 384 vendor/bootstrap/bootstrap-4.0.0.min.css | xxd -r -p | base64
+
+-->
