--- a/index.html
+++ b/index.html
@@ -5,17 +5,139 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>STEEM smartvotes voter page</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap-4.0.0.min.css"
           integrity="sha384-5iL/Lw9kHhhsgblb3am4cdovaFgONP7lxc4wh5a3qvq+X7NT+OlGQG29pKGZ2rzr"/>
 
-    <title>STEEM smartvotes voter page</title>
+    <style type="text/css">
+        .octicon {
+            height: 1rem;
+        }
+
+        footer {
+            border-top: 1px solid #777;
+        }
+    </style>
+
 </head>
-<body>
-<h1>STEEM smartvotes voter page</h1>
-<p>
-    Coming soon...
-</p>
+<body class="bg-light">
+
+<div class="container">
+    <div class="py-5 text-center">
+        <img class="d-block mx-auto mb-4" src="img/steem-logo.svg" alt="" width="100" height="100">
+        <h1 class="display-3 text-muted">steem<wbr /> smart<wbr />votes</h1>
+        <p class="lead">A smart tool that allows you to easily vote on behalf of your delegator. Put your posting key,
+            type a delegator's username and paste steemit link. Voila! </p>
+        <hr class="mb-4">
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="mb-3 text-center">Send form</h1>
+
+            <div class="alert alert-warning mb-4" role="alert">
+                This tool is under development. Form logic is not implemented yet.
+            </div>
+
+            <form class="needs-validation" novalidate>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <label for="voter-username">Your (voter) STEEM Username</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><img src="vendor/octicons/svg/person.svg" class="octicon" alt="User icon"/></span>
+                            </div>
+                            <div class="invalid-feedback" style="width: 100%;">
+                                Your username is required.
+                            </div>
+                            <input type="text" class="form-control" id="voter-username" placeholder="Voter username" required>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <label for="posting-key">Your (voter) posting key WIF</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><img src="vendor/octicons/svg/key.svg" class="octicon" alt="Key icon" /></span>
+                            </div>
+                            <div class="invalid-feedback" style="width: 100%;">
+                                Your posting key is required.
+                            </div>
+                            <input type="password" class="form-control" id="posting-key" placeholder="&bull;&bull;&bull;" required>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-2"></div>
+
+                <div class="mb-2">
+                    <label for="post-slug">Post slug (or link to the post on steemit)</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><img src="img/steem-logo.svg" class="octicon" alt="Steem logo icon" /></span>
+                        </div>
+                        <div class="invalid-feedback" style="width: 100%;">
+                            Link or slug is required
+                        </div>
+                        <input type="text" class="form-control" id="post-slug" placeholder="@user/post-title-slug" required>
+                    </div>
+                </div>
+
+                <div class="d-block">
+                    <div class="form-check form-check-inline mb-4">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+                        <label class="form-check-label" for="inlineRadio1">Send upvote</label>
+                    </div>
+                    <div class="form-check form-check-inline mb-4">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                        <label class="form-check-label" for="inlineRadio2">Send flag</label>
+                    </div>
+                </div>
+
+                <div class="mb-2"></div>
+
+                <div class="row">
+                    <div class="col-md-6 mb-6">
+                        <label for="delegator-username">Delegator username</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><img src="vendor/octicons/svg/mortar-board.svg" class="octicon" alt="Delegator icon"/></span>
+                            </div>
+                            <div class="invalid-feedback" style="width: 100%;">
+                                Delegator username is required.
+                            </div>
+                            <input type="text" class="form-control" id="delegator-username" placeholder="Delegator username" required>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        &nbsp;
+                    </div>
+                </div>
+
+                <div class="mb-4"></div>
+
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Send to blockchain</button>
+            </form>
+
+            <br /><br />
+
+            <br />
+        </div>
+    </div>
+
+    <footer class="my-5 pt-3 mt-4 text-muted text-center text-small">
+        <strong>More info</strong> / star / fork on
+        <a href="https://github.com/Jblew/steem-smartvotes-core" class="btn btn-outline-secondary">
+            <img src="vendor/octicons/svg/mark-github.svg" class="octicon" style="margin-bottom: 3px;" alt="Github logo" /> /Jblew/steem-smartvotes-core
+        </a>
+        <p> </p>
+        <p style="font-size: 0.75rem;">
+            Source of this page: <a href="https://github.com/Jblew/steem-smartvotes-voter-page">github.com/Jblew/steem-smartvotes-voter-page</a>. <br />
+            &copy; 2018-2018 by [pending]. LICENSE under discussion. Unlicensed till decision.
+        </p>
+    </footer>
+</div>
 
 <script src="vendor/jquery/jquery-3.3.1.min.js"
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"></script>
