--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="alert alert-warning mb-4" role="alert">
-                This tool is under development. Form logic is not implemented yet.
-            </div>
+            <span id="flash-messages"></span>
 
             <form class="needs-validation" novalidate>
                 <div class="row">
@@ -141,11 +139,25 @@
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"></script>
 <script src="vendor/bootstrap/bootstrap-4.0.0.min.js"
         integrity="sha384-hELc4MRmolvcDvuzl/3FNNU/J6iZrg9KjhNCuUJWtpClnHeJA4yID0ul8/pMrRxJ"></script>
+<script src="smartvotes-lib/steem-smartvotes.min.js"></script>
+<!-- There is no integrity sum, because the library is still in it's early development phase.
+It is a TODO to add integrity check for steem-smartvotes.min.js to voter-page. -->
+
+<script type="text/javascript">
+    function putFlashMessage(msg, cssClass) {
+        $("#flash-messages").append("<div class=\"alert alert-"+cssClass+" mb-4\">"+msg+"</div>");
+    }
+
+    function checkIfSmartvotesPresent() {
+        if(typeof(steemsmartvotes) === 'undefined') {
+            console.error("Steem-smartvotes lib is not present.");
+            putFlashMessage("Steem-smartvotes lib is not present.", "danger");
+        }
+    }
+
+    $(document).ready(function() {
+        checkIfSmartvotesPresent();
+    });
+</script>
 </body>
 </html>
-
-<!--
-shasum -b -a 384 vendor/bootstrap/bootstrap-4.0.0.min.css | xxd -r -p | base64
-shasum -b -a 384 vendor/bootstrap/bootstrap-4.0.0.min.css | xxd -r -p | base64
-
--->
