Update voter page for the new version of the library

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
+
+    <!-- Prayer: Gloria Patri, et Filio, et Spiritui Sancto, sicut erat in principio et nunc et semper et in saecula saeculorum. Amen. In te, Domine, speravi: non confundar in aeternum. -->
 </body>
 </html>
